--- a/land-3-ff-love.html
+++ b/land-3-ff-love.html
@@ -86,7 +86,7 @@
           <div class="u-carousel-inner u-gallery-inner" role="listbox">
             <div class="u-active u-carousel-item u-gallery-item u-carousel-item-1">
               <div class="u-back-slide">
-                <img class="u-back-image u-expanded" src="images/5.svg">
+                <img class="u-back-image u-expanded" src="images/4.svg">
               </div>
               <div class="u-over-slide u-over-slide-1">
                 <h3 class="u-gallery-heading"></h3>
@@ -95,7 +95,7 @@
             </div>
             <div class="u-carousel-item u-gallery-item u-carousel-item-2">
               <div class="u-back-slide">
-                <img class="u-back-image u-expanded" src="images/5.svg">
+                <img class="u-back-image u-expanded" src="images/4.svg">
               </div>
               <div class="u-over-slide u-over-slide-2">
                 <h3 class="u-gallery-heading"></h3>
@@ -128,7 +128,7 @@ c6.177,6.18,9.262,14.271,9.262,22.366C354.708,234.018,351.617,242.115,345.441,24
             </span>
           </a>
         </div>
-        <a href="wonderland#nav" class="u-btn u-button-style u-btn-1">返回奇境世界</a>
+        <a href="wonderland.html#nav" class="u-btn u-button-style u-btn-1">返回奇境世界</a>
       </div>
     </section>
     
