chore: merge projects

--- a/land-3-ff-love.html
+++ b/land-3-ff-love.html
@@ -20,13 +20,22 @@
 		"@context": "http://schema.org",
 		"@type": "Organization",
 		"name": "",
-		"logo": "images/default-logo.png"
+		"logo": "images/default-logo.png",
+		"sameAs": [
+				"https://baidu.com",
+				"https://twitter.com/name",
+				"https://instagram.com/name"
+		]
 }</script>
     <meta name="theme-color" content="#478ac9">
+    <meta name="twitter:site" content="@">
+    <meta name="twitter:card" content="summary_large_image">
+    <meta name="twitter:title" content="land-3-ff-love">
+    <meta name="twitter:description" content="">
     <meta property="og:title" content="land-3-ff-love">
     <meta property="og:type" content="website">
   </head>
-  <body class="u-body"><header class="u-clearfix u-header u-sticky u-sticky-0b07 u-header" id="sec-6341"><div class="u-clearfix u-sheet u-valign-middle u-sheet-1">
+  <body class="u-body"><header class="u-black u-clearfix u-header u-header" id="sec-c493"><div class="u-clearfix u-sheet u-valign-middle u-sheet-1">
         <a href="https://nicepage.com" class="u-image u-logo u-image-1">
           <img src="images/default-logo.png" class="u-logo-image u-logo-image-1">
         </a>
@@ -39,18 +48,18 @@
             </a>
           </div>
           <div class="u-custom-menu u-nav-container">
-            <ul class="u-nav u-unstyled u-nav-1"><li class="u-nav-item"><a class="u-button-style u-nav-link u-text-active-palette-1-base u-text-hover-palette-2-base" href="welcome" style="padding: 10px 20px;">欢迎来到</a>
-</li><li class="u-nav-item"><a class="u-button-style u-nav-link u-text-active-palette-1-base u-text-hover-palette-2-base" href="wonderland" style="padding: 10px 20px;">奇境世界</a>
-</li><li class="u-nav-item"><a class="u-button-style u-nav-link u-text-active-palette-1-base u-text-hover-palette-2-base" href="memories" style="padding: 10px 20px;">留下美好</a>
+            <ul class="u-nav u-unstyled u-nav-1"><li class="u-nav-item"><a class="u-button-style u-nav-link u-text-active-palette-1-base u-text-hover-palette-2-base" href="welcome.html" style="padding: 10px 20px;">欢迎来到</a>
+</li><li class="u-nav-item"><a class="u-button-style u-nav-link u-text-active-palette-1-base u-text-hover-palette-2-base" href="wonderland.html" style="padding: 10px 20px;">奇境世界</a>
+</li><li class="u-nav-item"><a class="u-button-style u-nav-link u-text-active-palette-1-base u-text-hover-palette-2-base" href="memories.html" style="padding: 10px 20px;">留下美好</a>
 </li></ul>
           </div>
           <div class="u-custom-menu u-nav-container-collapse">
             <div class="u-black u-container-style u-inner-container-layout u-opacity u-opacity-95 u-sidenav">
               <div class="u-inner-container-layout u-sidenav-overflow">
                 <div class="u-menu-close"></div>
-                <ul class="u-align-center u-nav u-popupmenu-items u-unstyled u-nav-2"><li class="u-nav-item"><a class="u-button-style u-nav-link" href="welcome" style="padding: 10px 20px;">欢迎来到</a>
-</li><li class="u-nav-item"><a class="u-button-style u-nav-link" href="wonderland" style="padding: 10px 20px;">奇境世界</a>
-</li><li class="u-nav-item"><a class="u-button-style u-nav-link" href="memories" style="padding: 10px 20px;">留下美好</a>
+                <ul class="u-align-center u-nav u-popupmenu-items u-unstyled u-nav-2"><li class="u-nav-item"><a class="u-button-style u-nav-link" href="welcome.html" style="padding: 10px 20px;">欢迎来到</a>
+</li><li class="u-nav-item"><a class="u-button-style u-nav-link" href="wonderland.html" style="padding: 10px 20px;">奇境世界</a>
+</li><li class="u-nav-item"><a class="u-button-style u-nav-link" href="memories.html" style="padding: 10px 20px;">留下美好</a>
 </li></ul>
               </div>
             </div>
@@ -62,8 +71,8 @@
       <div class="u-clearfix u-sheet u-valign-middle-xs u-sheet-1">
         <div class="u-align-left u-expanded-width-sm u-expanded-width-xs u-uploaded-video u-video u-video-1">
           <div class="embed-responsive">
-            <video class="embed-responsive-item" poster="images/2021642923450_.pic.jpg">
-              <source src="files/1642827016992031-1.mp4" type="video/mp4">
+            <video class="embed-responsive-item" poster="np://user.desktop.nicepage.com/Site_175612355/images/2021642923450_.pic.jpg">
+              <source src="files/1643008818008528.mp4" type="video/mp4">
               <p>Your browser does not support HTML5 video.</p>
             </video>
             <button class="u-video-poster"></button>
@@ -133,8 +142,15 @@ c6.177,6.18,9.262,14.271,9.262,22.366C354.708,234.018,351.617,242.115,345.441,24
     </section>
     
     
-    <footer class="u-align-center u-clearfix u-footer u-grey-80 u-footer" id="sec-bc9b"><div class="u-clearfix u-sheet u-sheet-1">
-        <p class="u-small-text u-text u-text-variant u-text-1">Sample text. Click to select the text box. Click again or double click to start editing the text.</p>
+    <footer class="u-align-center u-clearfix u-footer u-grey-80 u-footer" id="sec-b033"><div class="u-align-left-xs u-clearfix u-sheet u-valign-middle-xs u-sheet-1">
+        <div class="u-social-icons u-spacing-10 u-social-icons-1">
+          <a class="u-social-url" title="facebook" target="_blank" href="https://baidu.com"><span class="u-file-icon u-icon u-social-facebook u-social-icon u-icon-1"><img src="images/6557793.png" alt=""></span>
+          </a>
+          <a class="u-social-url" title="twitter" target="_blank" href="https://twitter.com/name"><span class="u-file-icon u-icon u-social-icon u-social-twitter u-icon-2"><img src="images/1059157.png" alt=""></span>
+          </a>
+          <a class="u-social-url" title="instagram" target="_blank" href="https://instagram.com/name"><span class="u-file-icon u-icon u-social-icon u-social-instagram u-icon-3"><img src="images/1828961.png" alt=""></span>
+          </a>
+        </div>
       </div></footer>
     <section class="u-backlink u-clearfix u-grey-80">
       <a class="u-link" href="https://nicepage.com/website-design" target="_blank">
