--- a/memories.html
+++ b/memories.html
@@ -6,7 +6,7 @@
     <meta name="keywords" content="职员表, NICE 2 Meet U">
     <meta name="description" content="">
     <meta name="page_type" content="np-template-header-footer-from-plugin">
-    <title>留下美好</title>
+    <title>memories</title>
     <link rel="stylesheet" href="nicepage.css" media="screen">
 <link rel="stylesheet" href="memories.css" media="screen">
     <script class="u-script" type="text/javascript" src="jquery.js" defer=""></script>
@@ -33,9 +33,9 @@
     <meta name="theme-color" content="#478ac9">
     <meta name="twitter:site" content="@">
     <meta name="twitter:card" content="summary_large_image">
-    <meta name="twitter:title" content="留下美好">
+    <meta name="twitter:title" content="memories">
     <meta name="twitter:description" content="">
-    <meta property="og:title" content="留下美好">
+    <meta property="og:title" content="memories">
     <meta property="og:type" content="website">
   </head>
   <body class="u-body"><header class="u-black u-clearfix u-header u-header" id="sec-c493"><div class="u-clearfix u-sheet u-valign-middle u-sheet-1">
