--- a/welcome.html
+++ b/welcome.html
@@ -6,7 +6,7 @@
     <meta name="keywords" content="​北辰青年终极行动, YG15终极行动主海报">
     <meta name="description" content="">
     <meta name="page_type" content="np-template-header-footer-from-plugin">
-    <title>欢迎来到</title>
+    <title>welcome</title>
     <link rel="stylesheet" href="nicepage.css" media="screen">
 <link rel="stylesheet" href="welcome.css" media="screen">
     <script class="u-script" type="text/javascript" src="jquery.js" defer=""></script>
@@ -32,9 +32,9 @@
     <meta name="theme-color" content="#478ac9">
     <meta name="twitter:site" content="@">
     <meta name="twitter:card" content="summary_large_image">
-    <meta name="twitter:title" content="欢迎来到">
+    <meta name="twitter:title" content="welcome">
     <meta name="twitter:description" content="">
-    <meta property="og:title" content="欢迎来到">
+    <meta property="og:title" content="welcome">
     <meta property="og:type" content="website">
   </head>
   <body class="u-body u-gradient" style="background-image: linear-gradient(black, #333129);"><header class="u-black u-clearfix u-header u-header" id="sec-c493"><div class="u-clearfix u-sheet u-valign-middle u-sheet-1">
