chore: remove footer

--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html style="font-size: 16px;">
+<html style="font-size: 16px;" lang="zh-Hans-CN">
   <head>
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta charset="utf-8">
@@ -21,7 +21,7 @@
     <script type="application/ld+json">{
 		"@context": "http://schema.org",
 		"@type": "Organization",
-		"name": "",
+		"name": "yesgo15-final-event",
 		"logo": "images/default-logo.png",
 		"sameAs": [
 				"https://baidu.com",
@@ -33,8 +33,9 @@
     <meta name="twitter:site" content="@">
     <meta name="twitter:card" content="summary_large_image">
     <meta name="twitter:title" content="welcome">
-    <meta name="twitter:description" content="">
+    <meta name="twitter:description" content="yesgo15-final-event">
     <meta property="og:title" content="welcome">
+    <meta property="og:description" content="">
     <meta property="og:type" content="website">
   </head>
   <body data-home-page="welcome.html" data-home-page-title="welcome" class="u-body u-gradient" style="background-image: linear-gradient(black, #333129);"><header class="u-black u-clearfix u-header u-header" id="sec-c493"><div class="u-clearfix u-sheet u-valign-middle u-sheet-1">
@@ -148,16 +149,5 @@
           </a>
         </div>
       </div></footer>
-    <section class="u-backlink u-clearfix u-grey-80">
-      <a class="u-link" href="https://nicepage.com/css-templates" target="_blank">
-        <span>CSS Templates</span>
-      </a>
-      <p class="u-text">
-        <span>created with</span>
-      </p>
-      <a class="u-link" href="https://nicepage.com/website-builder" target="_blank">
-        <span>Website Builder</span>
-      </a>. 
-    </section>
   </body>
 </html>
