--- a/memories.html
+++ b/memories.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html style="font-size: 16px;">
+<html style="font-size: 16px;" lang="zh-Hans-CN">
   <head>
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta charset="utf-8">
@@ -22,7 +22,7 @@
     <script type="application/ld+json">{
 		"@context": "http://schema.org",
 		"@type": "Organization",
-		"name": "",
+		"name": "yesgo15-final-event",
 		"logo": "images/default-logo.png",
 		"sameAs": [
 				"https://baidu.com",
@@ -34,8 +34,9 @@
     <meta name="twitter:site" content="@">
     <meta name="twitter:card" content="summary_large_image">
     <meta name="twitter:title" content="memories">
-    <meta name="twitter:description" content="">
+    <meta name="twitter:description" content="yesgo15-final-event">
     <meta property="og:title" content="memories">
+    <meta property="og:description" content="">
     <meta property="og:type" content="website">
   </head>
   <body class="u-body"><header class="u-black u-clearfix u-header u-header" id="sec-c493"><div class="u-clearfix u-sheet u-valign-middle u-sheet-1">
@@ -143,16 +144,5 @@
           </a>
         </div>
       </div></footer>
-    <section class="u-backlink u-clearfix u-grey-80">
-      <a class="u-link" href="https://nicepage.com/website-templates" target="_blank">
-        <span>Website Template</span>
-      </a>
-      <p class="u-text">
-        <span>created with</span>
-      </p>
-      <a class="u-link" href="https://nicepage.best" target="_blank">
-        <span>Best Website Builder</span>
-      </a>. 
-    </section>
   </body>
 </html>
