--- a/wonderland.html
+++ b/wonderland.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html style="font-size: 16px;">
+<html style="font-size: 16px;" lang="zh-Hans-CN">
   <head>
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta charset="utf-8">
@@ -20,7 +20,7 @@
     <script type="application/ld+json">{
 		"@context": "http://schema.org",
 		"@type": "Organization",
-		"name": "",
+		"name": "yesgo15-final-event",
 		"logo": "images/default-logo.png",
 		"sameAs": [
 				"https://baidu.com",
@@ -32,8 +32,9 @@
     <meta name="twitter:site" content="@">
     <meta name="twitter:card" content="summary_large_image">
     <meta name="twitter:title" content="wonderland">
-    <meta name="twitter:description" content="">
+    <meta name="twitter:description" content="yesgo15-final-event">
     <meta property="og:title" content="wonderland">
+    <meta property="og:description" content="">
     <meta property="og:type" content="website">
   </head>
   <body class="u-body"><header class="u-black u-clearfix u-header u-header" id="sec-c493"><div class="u-clearfix u-sheet u-valign-middle u-sheet-1">
@@ -71,7 +72,7 @@
     <section class="u-align-center u-black u-clearfix u-section-1" id="carousel_d2c4">
       <div class="u-clearfix u-sheet u-valign-middle u-sheet-1">
         <h2 class="u-text u-text-1">From Zero 2 One</h2>
-        <p class="u-text u-text-2">下面这个是个场馆搭建的</p>
+        <p class="u-text u-text-2">下面这个是各场馆搭建的视频</p>
         <div class="u-video u-video-1">
           <div class="embed-responsive embed-responsive-1">
             <iframe style="position: absolute;top: 0;left: 0;width: 100%;height: 100%;" class="embed-responsive-item" src="https://www.youtube.com/embed/fssZtofUn2o?mute=0&amp;showinfo=0&amp;controls=0&amp;start=0" frameborder="0" allowfullscreen=""></iframe>
@@ -113,16 +114,5 @@
           </a>
         </div>
       </div></footer>
-    <section class="u-backlink u-clearfix u-grey-80">
-      <a class="u-link" href="https://nicepage.com/website-templates" target="_blank">
-        <span>Website Templates</span>
-      </a>
-      <p class="u-text">
-        <span>created with</span>
-      </p>
-      <a class="u-link" href="" target="_blank">
-        <span>Website Builder Software</span>
-      </a>. 
-    </section>
   </body>
 </html>
