--- a/land-6-blind-string.html
+++ b/land-6-blind-string.html
@@ -73,7 +73,7 @@
         <div class="u-align-left u-expanded-width-sm u-expanded-width-xs u-uploaded-video u-video u-video-1">
           <div class="embed-responsive">
             <video class="embed-responsive-item" poster="np://user.desktop.nicepage.com/Site_175612355/images/2051642923460_.pic.jpg">
-              <source src="npv://user.desktop.nicepage.com/Site_175612355/files/1642827016992031-1.mp4" type="video/mp4">
+              <source src="files/blind-string.mp4" type="video/mp4">
               <p>Your browser does not support HTML5 video.</p>
             </video>
             <button class="u-video-poster"></button>
@@ -96,7 +96,7 @@
           <div class="u-carousel-inner u-gallery-inner" role="listbox">
             <div class="u-active u-carousel-item u-gallery-item u-carousel-item-1">
               <div class="u-back-slide">
-                <img class="u-back-image u-expanded" src="images/3.svg">
+                <img class="u-back-image u-expanded" src="images/4.svg">
               </div>
               <div class="u-over-slide u-over-slide-1">
                 <h3 class="u-gallery-heading"></h3>
@@ -105,7 +105,7 @@
             </div>
             <div class="u-carousel-item u-gallery-item u-carousel-item-2">
               <div class="u-back-slide">
-                <img class="u-back-image u-expanded" src="images/3.svg">
+                <img class="u-back-image u-expanded" src="images/4.svg">
               </div>
               <div class="u-over-slide u-over-slide-2">
                 <h3 class="u-gallery-heading"></h3>
